--- a/src/contact/components/contact.htm
+++ b/src/contact/components/contact.htm
@@ -11,7 +11,7 @@
   <div class="container">
     <!--contact info start-->
     <div class="col-xs-12 col-sm-3 col-md-4 col-lg-4">
-      <h4 class="js_trigger_map_marker">Contact details</h4>
+      <h4>Contact details</h4>
       <p>
         <i class="icon-location icon-lg"></i>&nbsp;
         Brooklyn, Wellington, New Zealand
